--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,8 @@
 
         <title>Sketch - GoshDarnGames P5JS</title>
 
-        <script src="../lib/p5.js"></script>
+        <script src="../lib/p5.min.js"></script>
+        <script src="../lib/p5.sound.min.js"></script>
         <script src="sketch.js" ></script>
 
     </head>
