--- a/template/index.html
+++ b/template/index.html
@@ -4,10 +4,16 @@
     <head>
         <meta charset="utf-8">
 
+        <link rel="stylesheet" type="text/css" href="style.css" />
+
         <title>Sketch - GoshDarnGames P5JS</title>
 
         <script src="../../lib/p5.min.js"></script>
         <script src="../../lib/p5.sound.min.js"></script>
+        <script src="../../lib/matter.min.js"></script>
+        <script src="../../lib/CCapture.all.min.js"></script>
+
+        <script src="main.js" ></script>
         <script src="sketch.js" ></script>
 
     </head>
